<resources>
    <string name="app_name">friends</string>


    <string name="create_a_new_account">create_a_new_account</string>

    <string name="email">email</string>
    <string name="password">password</string>
    <string name="user_name">user name</string>
    <string name="create_account">create account</string>
    <string name="welcome_to_friend_chat_app">welcome to friend chat app</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="need_a_new_accoutn">need a new accoutn</string>
    <string name="log_out">Log Out</string>
    <string name="all_users">All Users</string>
    <string name="change_image">change image</string>
    <string name="it_is_all_well_and_shall_be_well">It is all well and shall be well</string>
    <string name="displan_name">displan name</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">LOGIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_friends_page">Welcome to friends page</string>
    <string name="welcome_to_request_page">welcome to request page</string>
    <string name="welcome_to_chats_page">welcome to chats page</string>
    <string name="status">status</string>
    <string name="save_changes">save changes</string>
    <string name="dilsplay_name">dilsplay name</string>
    <string name="user_default_status">user default status</string>
    <string name="welcome_to_friends_chat_app">welcome to friends chat app</string>
    <string name="total_friends">total friends</string>
    <string name="decline_friend_request">decline friend request</string>
    <string name="name">name</string>
    <string name="current_usere_status">Current Usere Status</string>
    <string name="total_friend">Total friends</string>
    <string name="online">Online</string>
    <string name="cleanChat">cleanChat</string>
    <string name="enter_message">Enter Message ...</string>
    <string name="shek">Shek</string>
    <string name="how_are_you_doing_this_is_a_long_message_that_should_probably_wrap">how_are_you_doing_this_is_a_long_message_that_should_probably_wrap</string>
    <string name="second_textesview">Second TextesView</string>
    <string name="friends">Friends</string>
    <string name="raised_button">CONTINUE</string>
    <string name="or">or</string>
    <string name="need_a_account">Need a account?</string>
    <string name="sign_up">SIgn up</string>
    <string name="feel">Feel</string>
    <string name="cleanchat">cleanChat</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account2">Create account</string>
    <string name="welcome">Welcome</string>
    <string name="request_sent">Request Sent</string>
    <string name="_0">0</string>
    <string name="received">Received</string>
    <string name="change_status">change status</string>
    <string name="add_profile_picture">Add profile picture ?</string>
    <string name="skip">Skip</string>
    <string name="create_a_new_account2">create a new account</string>
    <string name="create">Create</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="_00_00">00:00</string>
    <string name="the_bset_we_to_do_this_jow_is_a">the bset we to do this jow is a</string>
    <string name="textview_asdfjskf_asdf_aksdfasdf_asdf_ajksdfafads">TextView asdfjskf asdf aksdfasdf asdf ajksdfafads</string>
    <string name="from_image">From</string>
    <string name="search">Search ...</string>
    <string name="accounts_settings">Accounts Settings</string>
    <string name="friend_requests">Friend requests</string>
    <string name="req_sent">Sent</string>
    <string name="sent_a_friend_request">sent a friend request</string>


    <!--From tokbox lab-->
    <string name="action_settings">Settings</string>

    <string name="title_settings_dialog">Permissions Required</string>
    <string name="rationale_video_app">This app needs access to your camera and mic to make video calls</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>

    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
</resources>
