<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.shekglory.friends.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/feel" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="0.7dip"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/cleanchat"
        android:textSize="30sp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newAcBut"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:text="@string/i_have_an_account"
        android:textColor="@color/common_google_signin_btn_text_light" />


        <Button
            android:id="@+id/newAcBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="10dp"
            android:backgroundTint="#ff4081"
            android:text="@string/sign_in"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorLink="@color/common_google_signin_btn_text_dark_default" />




        <Button
            android:id="@+id/regButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newAcBut"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:padding="10dp"
            android:background="@android:color/background_light"
            android:text="@string/create_account2"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
           />


    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="0.7dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp"
        android:background="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/welcome" />


</RelativeLayout>
