<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">




    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="120dp"
        android:text="@string/login_to_your_account"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
        android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18dp"
        tools:textColorLink="@color/common_google_signin_btn_text_dark_focused" />



    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:id="@+id/logtextInputLayoutEmail"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:id="@+id/logtextInputLayoutPassword"
        android:layout_below="@+id/logtextInputLayoutEmail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:passwordToggleEnabled="true"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/logcreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logtextInputLayoutPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#ff4081"
        android:text="@string/login"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/common_google_signin_btn_text_dark_default" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_a_account" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/goToRegisterFromLoing_id"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:background="#FFFF"
            android:layout_marginLeft="20dp"
            android:text="@string/sign_up" />

    </LinearLayout>



</RelativeLayout>