<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SettingsActivity">

    <include layout="@layout/app_bar_layout" android:id="@+id/accountSettings_id"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/settingdisplayimage_id"
        android:layout_below="@+id/accountSettings_id"
        android:orientation="horizontal"
        >

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/settingsImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/defaultimg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >


            <TextView
                android:id="@+id/displayNameSettingId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/displan_name"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/statusSettingId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="@string/it_is_all_well_and_shall_be_well"



                android:textSize="15sp" />


        </LinearLayout>

    </LinearLayout>

    <View android:id="@+id/separator"
        android:background="#000000"
        android:layout_width = "match_parent"
        android:layout_height="0.9dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/settingdisplayimage_id"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/cardview"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/separator"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/req_sent"
                    android:textSize="20sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingTop="10dp"
                   />

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends"
                    android:textSize="20sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/friend_number_id"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingTop="10dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/received"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingTop="10dp"

                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>




    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/changeImageId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="49dp"
            android:background="@android:color/background_light"
            android:padding="10dp"
            android:text="@string/change_image"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="258dp" />

        <Button
            android:id="@+id/changeStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_below="@+id/changeImageId"
            android:layout_marginStart="12dp"
            android:layout_marginTop="18dp"
            android:background="#ff4081"
            android:layout_centerHorizontal="true"
            android:text="@string/change_status"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="258dp" />

    </TableLayout>

</RelativeLayout>