<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/messageSingleLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="1dp">



    <LinearLayout

        android:id="@+id/chat_left_msg_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/message_text_background"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="80dp"
        android:gravity="start"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/messageTextLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="0dp"
            android:textColor="#444444"
            android:textSize="14sp"

            android:text="@string/textview_asdfjskf_asdf_aksdfasdf_asdf_ajksdfafads" />

        <TextView
            android:id="@+id/time_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_gravity="end"
            android:text="@string/_00_00"
            android:textSize="12sp" />


    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/chat_right_msg_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/their_message"
        android:layout_gravity="end"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
       >

        <TextView
            android:id="@+id/myMessageTextLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_bset_we_to_do_this_jow_is_a"
            android:textColor="#444444"
            android:textSize="14sp"
            android:layout_margin="10dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_gravity="end"
            android:id="@+id/their_message_time"
            android:text="@string/_00_00"
            android:textSize="12sp"/>






    </LinearLayout>




    <ImageView
        android:id="@+id/message_image_layout"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/shekinah"
        >



    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageFromId"
        android:text="@string/from_image"
        android:layout_marginLeft="220dp"
        android:visibility="gone"/>



</LinearLayout>